k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: table2taste-ingress
  namespace: table2taste
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: table2taste.cabrasky.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: table2taste-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: table2taste-frontend
                port:
                  number: 80
